--- a/src/style/tableStyle.css
+++ b/src/style/tableStyle.css
@@ -5,3 +5,20 @@
     /* padding: 10px 0; */
     /* 设置内边距，此处示例为上下各 5px */
 }
+
+.MyButton {
+    text-align: center;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 20px;
+    background: rgba(17, 152, 230, 0.3);
+    transition: 0.2s;
+}
+
+.MyButton:hover {
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 10px;
+    background: rgba(17, 152, 230);
+    color: white;
+}
